# DrawCAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scene.drawcal  tmp_patch_diff.txt
.github/workflows/: build-desktop.yml
assets/models/: grid.fs  lighting.fs
assets/textures/Metal_texture-PNG/: Metal055A_1K-PNG.blend  Metal055A_1K-PNG.mtlx  Metal055A_1K-PNG.usdc
drawcal/: lighting.fs  lighting.vs
drawcal/shaders/: grid.fs  grid.vs  lighting.fs  lighting.vs  shadowmap.fs  shadowmap.vs
drawcal/textures/Metal_texture-PNG/: Metal055A_1K-PNG.tres
src/: main.cpp  main.h  raygui_impl.cpp
src/data/save_load/: gui_window_file_dialog.h  save.cpp  saveNload.cpp  saveNload.h
src/features/camera/: CameraController.cpp  CameraController.h
src/features/learning/: FreeDrawMode.cpp  FreeDrawMode.h  GuidedMode.cpp  GuidedMode.h
src/features/manipulation/: Transform.cpp  Transform.h
src/features/shadings/: lighting.cpp  lighting.h  textures.cpp  textures.h
src/input/: InputHandler.cpp  InputHandler.h
src/objects/: object.cpp  object.h
src/rendering/: renderer.cpp  renderer.h  resolution.cpp  resolution.h
src/ui/layout/: layout.cpp  layout.h
src/ui/panels/: toolbar.cpp  toolbar.h
src/ui/scenes/: UiStyle.h  learnMenuScenes.cpp  learnMenuScenes.h  mainMenuOptions.cpp  mainMenuOptions.h  mainMenuScenes.cpp  mainMenuScenes.h  sceneManager.cpp  sceneManager.h
src/ui/themes/: style_amber.h  style_cyber.h  style_dark.h  style_genesis.h  style_jungle.h  themes.cpp  themes.h
src/ui/widgets/: buttons.cpp  buttons.h
